# Nexus

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: core.py  data.xlsx  data_loader.py  initdb.sql  main.py
app/databases/: nexus_db.py
app/migrations/: env.py
app/migrations/versions/: 297513e74495_first_migration.py
app/models/: models.py
app/routes/: activities.py  organizations.py
app/services/: services.py
